<package format="2">
  <name>toycar</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for chassis_build1</p>
    <p>This package contains configuration data, 3D models and launch files
      for autonomous toy car robot</p>
  </description>
  <author>Yashaarth Todi</author>
  <maintainer email="ytodi@terpmail.umd.edu" />
  <license>BSD</license>

  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>

<buildtool_depend>catkin</buildtool_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>tf</build_depend>
<build_depend>message_generation</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>tf</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>message_runtime</exec_depend>
<exec_depend>tf</exec_depend>
<test_depend>rosunit</test_depend>
<test_depend>gtest</test_depend>
  <depend>nav_msgs</depend>
  <export>
  <architecture_independent />
  </export>
</package>
